# xpider

./: .gitignore  main.py  pyproject.toml
xpider/: __init__.py  cfgs.py  interfaces.py  xerrors.py  xlogger.py  xprocess.py  xresponses.py
xpider/xtasks/: __init__.py  xrequests.py
